tweak alignment and sizes, fix moveBelowMenuBar sizing

--- a/assets/styles/quakey.css
+++ b/assets/styles/quakey.css
@@ -114,12 +114,12 @@
 }
 
 #configForm .textfield {
-    width: 750;
+    width: 800;
     color: #cccccc;
 }
 
 #configform .dropdown {
-    width: 750;
+    width: 800;
     border-size: 0;
 }
 
